# www-project-agent-memory-guard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: track-referrers.yml  update-downloads.yml
analytics/: bigquery-pypi-analysis.sql
docs/: README_ja.md  agent-memory-security-landscape.md  compliance-mapping.md
mcp-server/: README.md  pyproject.toml
mcp-server/src/amg_mcp_server/: __init__.py  __main__.py
src/agent_memory_guard/: __init__.py  classification.py  events.py  exceptions.py  guard.py
src/agent_memory_guard/detectors/: __init__.py  anomaly.py  base.py  cross_task.py  injection.py  leakage.py  protected_keys.py  self_reinforcement.py
src/agent_memory_guard/integrations/: crewai.py
src/agent_memory_guard/policies/: policy.py
src/agent_memory_guard/storage/: __init__.py  memory_store.py  redis_store.py  snapshots.py
tests/: test_classification.py  test_redis_store.py
tests/benchmarks/: test_redis_benchmark.py
